--- a/english.html
+++ b/english.html
@@ -363,6 +363,8 @@ Error message and password prompt
 
 <li>Coffee shops</li>
 
+<li>Comprehensive or compulsive</li>
+
 <li>Dalya`s room</li>
 
 <li>Dandan</li>
@@ -629,6 +631,8 @@ Error message and password prompt
 
 <li>On the road to somewhere</li>
 
+<li>On the spectrum</li>
+
 <li>On the way to Sarona</li>
 
 <li>Once</li>
@@ -652,8 +656,6 @@ Error message and password prompt
 <li>Pedro Almodóvar</li>
 
 <li>Pele Ozen</li>
-
-<li>Perfectionism or OCD</li>
 
 <li>Philip Seymour Hoffman</li>
 
@@ -841,7 +843,7 @@ Error message and password prompt
 
 <li>Torte</li>
 
-<li>Tower of Babel</li>
+<li>Tower of Babylon</li>
 
 <li>TREME</li>
 
@@ -8753,7 +8755,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200223190256872" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200304125039111" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8762,7 +8764,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Mental generation]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[On the spectrum]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8782,7 +8784,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223194636286" title="$:/temp/search">
+<div created="20161023184814872" modified="20200304124821777" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9674,6 +9676,17 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
+<div created="20200217203006778" modified="20200304124940311" tags="[[Monkeys with car keys]]" title="Comprehensive or compulsive">
+<pre>[img[pictures/spiritual-level.jpg]]
+
+
+!!![[Yoyo]]:
+
+Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wiki/Spirit_level]] instead of a [[third eye|https://en.wikipedia.org/wiki/Third_eye]] or is it an [[obsessive–compulsive disorder|https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder]]? It's not only that I have to straighten things all the time, and things have to be in the angle I want. I almost always plan, I almost always [[misenplate|Misenplation]], I'm worried about things I've said or haven't said. There's a thin line between perfectionism and OCD, and lately I've discovered there's a thing called legit OCD, and how glad was I. 
+
+
+ &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
+</div>
 <div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
@@ -9994,7 +10007,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200303102719553" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200304123921142" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11109,9 +11122,7 @@ meaning
 </pre>
 </div>
 <div created="20200303102617862" modified="20200303102758368" tags="[[Monkeys with car keys]]" title="Mental generation">
-<pre>
-
-[img[pictures/mental-generation.jpg]]
+<pre>[img[pictures/mental-generation.jpg]]
 
 
 
@@ -11360,6 +11371,42 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 
 </pre>
 </div>
+<div created="20200304123659550" modified="20200304125727020" tags="[[Iry claims]] [[Monkeys with car keys]]" title="On the spectrum">
+<pre>
+[img[pictures/spectrum.jpg]]
+
+
+!!![[Iry]]:
+
+As part of education first degree studying, we had to take the &quot;holocaust&quot; course. The lecturer started the first lesson with the question:
+
+What is the most important thing we can learn from the holocaust?
+
+And he immediately answered:
+
+The most important thing that each one of us should learn from the holocaust is, that in each one of us lays the potential of becoming a Nazi. 
+
+[[Have you ever asked yourselves where are you on the Nazi spectrum?|https://www.youtube.com/watch?v=stN6ZjpbRYk]]
+
+Do you cooperate with the authorities? Are you close to people in influential positions? Do you cooperate with the media? Is media consumption considered as cooperation? Are you financed by organizations who financed by financed organizations?
+
+[[There are many measures, and each measure stands solely.|https://en.wikipedia.org/wiki/Spectrum]]
+
+Have you ever asked yourselves if you're on some kind of a spectrum? Are you on the [[autism spectrum?|Social skills]] On the mental disorders spectrum? What is your syndrome? Just how much are you addicted to drugs, including prescribed ones? Are you [[comprehensive or compulsive?|Comprehensive or compulsive]] Where do you draw the line between perfectionism and OCD? Were you willing to be [[Auschwitz's|https://en.wikipedia.org/wiki/Auschwitz_concentration_camp]] plumber?  The contractor of [[Autobahn?|https://en.wikipedia.org/wiki/Autobahn]] Do you pay attention to injustice? Inequality? The occupation?
+
+ 
+[[Do you think that the occupation corrupted you?|https://www.youtube.com/watch?v=vKZtzmjm-FM]]
+
+Do you want to exclude a person or a group of people based on their nationality, religion or gender?
+
+Where are you on the collective memory spectrum? The controlling spectrum? The power spectrum? The sight spectrum? Do you beat others? Do you shout? Where are you on the empathy-apathy spectrum? Do you ask before you take? Do you ask before you push? Do you pay little to many servants? Do you think some are entitled to more than others? Do you cooperate with the powerful who powerfully exploit?
+
+Are you happy that Jerusalem was declared as the capital of Israel by the American enemy? It is not good that the man should be [[alone in Berlin|https://en.wikipedia.org/wiki/Every_Man_Dies_Alone]].
+
+
+
+ &lt;&lt;heblink [[על הספקטרום]]&gt;&gt;</pre>
+</div>
 <div created="20200217152050036" modified="20200219132039540" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
 <pre>[img[pictures/baderech-lesarona.jpg]]
 
@@ -11514,17 +11561,6 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
  &lt;&lt;heblink [[פלא אוזן]]&gt;&gt;
 
 </pre>
-</div>
-<div created="20200217203006778" modified="20200217215723272" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
-<pre>[img[pictures/spiritual-level.jpg]]
-
-
-!!![[Yoyo]]:
-
-Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wiki/Spirit_level]] instead of a [[third eye|https://en.wikipedia.org/wiki/Third_eye]] or is it an [[obsessive–compulsive disorder|https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder]]? It's not only that I have to straighten things all the time, and things have to be in the angle I want. I almost always plan, I almost always [[misenplate|Misenplation]], I'm worried about things I've said or haven't said. There's a thin line between perfectionism and OCD, and lately I've discovered there's a thing called legit OCD, and how glad was I. 
-
-
- &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
 <div created="20200218184450279" modified="20200218185300723" tags="[[Outer sisters]] Films" title="Philip Seymour Hoffman">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
@@ -12621,7 +12657,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
 </div>
-<div created="20200226110658194" modified="20200226110939417" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]]" title="Tower of Babel">
+<div created="20200226110658194" modified="20200304112709401" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]]" title="Tower of Babylon">
 <pre>[img[pictures/migdal-bavel.jpg]]
 
 
