--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דור הנפש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[על הספקטרום]] [[כישורים חברתיים]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200302135403626" title="$:/temp/search">
+<div created="20161023184814872" modified="20200304124558079" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200303102829824" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200304124026240" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11932,8 +11932,7 @@ Is where I want to be
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
 <div created="20200303102502696" modified="20200303102856758" tags="[[קופים ממונעים]]" title="דור הנפש">
-<pre>
-[img[pictures/mental-generation.jpg]]
+<pre>[img[pictures/mental-generation.jpg]]
 
 
 
@@ -13726,14 +13725,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/tethys-sea.jpg]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
-<div created="20171210203415794" modified="20200217204012228" tags="[[קופים ממונעים]]" title="יסודי או ocd">
+<div created="20171210203415794" modified="20200304125015000" tags="[[קופים ממונעים]]" title="יסודי או ocd">
 <pre>[img[pictures/spiritual-level.jpg]]
 
 !!![[יויו]]:
 
 לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd, ולאחרונה גיליתי שיש דבר כזה שנקרא legit ocd ומה רבה שמחתי.
 
-&lt;&lt;englink [[Perfectionism or OCD]]&gt;&gt;
+&lt;&lt;englink [[Comprehensive or compulsive]]&gt;&gt;
 </pre>
 </div>
 <div created="20170422205250692" modified="20180605132756716" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
@@ -15338,7 +15337,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן. מגבות המטבח הן חברות.</pre>
 </div>
-<div created="20190908124152651" modified="20200226110957216" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="מגדל בבל">
+<div created="20190908124152651" modified="20200304112914692" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="מגדל בבל">
 <pre>[img[pictures/migdal-bavel.jpg]]
 
 !!![[אירי]]:
@@ -15346,7 +15345,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כולנו בני נח שהתפשטו על פני כדור הארץ עד לעצם היום הזה, ולשונות רבות ושונות לנו, אך גם אחת משותפת - גלובלית ממוקססת - זו שמדברים בה במרשתת, והיא מחברת בין כולנו. לא הייתי רוצה שניתן שוב לשמרנים שביננו, אלה שהאחר מבעית אותם, אלה שחוששים מהצבעוני, מהאקספרסיבי, מהחושב, מהמורד, מהדעתן - להפחיד אותנו שוב ולהכניסנו למחשכי הגזענות והרודנות - כי לא! לא נשב ונבכה על הנהרות - ולא נסכים לרעיון שבורא שלנו הטוב, מאמין בהפרד ומשול.
 
 
-&lt;&lt;englink [[Tower of Babel]]&gt;&gt;
+&lt;&lt;englink [[Tower of Babylon]]&gt;&gt;
 </pre>
 </div>
 <div created="20170926191733045" modified="20200226112317168" tags="הסופרנוס ילדים טלוויזיה סדרות" title="מדו">
@@ -17003,7 +17002,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20171209165611878" modified="20180605151921115" tags="[[אירי טוענת]] [[קופים ממונעים]]" title="על הספקטרום">
+<div created="20171209165611878" modified="20200304124101324" tags="[[אירי טוענת]] [[קופים ממונעים]]" title="על הספקטרום">
 <pre>[img[pictures/spectrum.jpg]]
 
 !!![[אירי]]:
@@ -17034,7 +17033,7 @@ __אופן ההכנה:__
 האם אתם שמחים שירושלים הוכרזה כבירת ישראל  על ידי הצורר האמריקני? לא טוב היות האדם [[לבד בברלין|https://he.wikipedia.org/wiki/%D7%9C%D7%91%D7%93_%D7%91%D7%91%D7%A8%D7%9C%D7%99%D7%9F]].
 
 
-
+&lt;&lt;englink [[On the spectrum]]&gt;&gt;
 </pre>
 </div>
 <div created="20170628145012336" modified="20200217120844336" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="עם הפנים החוצה">
@@ -17147,7 +17146,7 @@ May the lord bless your soul, I love you girl
 
 &lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
 </div>
-<div created="20170603193440578" modified="20200225173940238" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
+<div created="20170603193440578" modified="20200304113255350" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
 !!![[אירי]]:
@@ -17155,7 +17154,7 @@ May the lord bless your soul, I love you girl
 כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]].
 
 
-&lt;&lt;englink [[F.M.Alexander]]&gt;&gt;
+&lt;&lt;englink [[F.M. Alexander]]&gt;&gt;
 
 </pre>
 </div>
