--- a/english.html
+++ b/english.html
@@ -8764,7 +8764,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[On the spectrum]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Social skills]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12000,8 +12000,17 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
  &lt;&lt;heblink [[טלפון חכם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226110213394" modified="20200226110320166" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
+<div created="20200226110213394" modified="20200304130546948" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
 <pre>[img[pictures/kishurim.jpg]]
+
+
+!!![[Yoyo]]:
+
+Since all of us are at-risk youth on the asperger spectrum, [[among other things|On the spectrum]], we learn together how to deal with unpredictable situations in life, like questions that leave us shocked.
+
+A basic first answer is: &quot;I'll think about it&quot;.
+
+ In the apartment renovation period, this sentence has become an idiomatic phrase among us.   
 
 
 
