--- a/english.html
+++ b/english.html
@@ -721,6 +721,8 @@ Error message and password prompt
 
 <li>Semolina cake</li>
 
+<li>Send</li>
+
 <li>Sex Education</li>
 
 <li>Shalom Hanoch</li>
@@ -8755,7 +8757,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200304125039111" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200306133317799" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8764,7 +8766,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Social skills]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8784,7 +8786,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200304124821777" title="$:/temp/search">
+<div created="20161023184814872" modified="20200306131151475" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10007,7 +10009,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200304123921142" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306133331279" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11121,11 +11123,11 @@ meaning
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200303102617862" modified="20200303102758368" tags="[[Monkeys with car keys]]" title="Mental generation">
+<div created="20200303102617862" modified="20200306124819398" tags="[[Monkeys with car keys]]" title="Mental generation">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
-
+[[SLAM MENTAL|https://www.youtube.com/watch?v=lldS41Px5_s]]
 
 
 
@@ -11925,6 +11927,22 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 </pre>
 </div>
+<div created="20200306133247437" modified="20200306133556733" tags="[[Coen sister]]" title="Send">
+<pre>
+[img[pictures/CT2ku66Mqk7cBavl.JPG]]
+''
+
+Everything will be clarified''
+
+
+ &lt;&lt;heblink [[שלח]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20200226103435046" modified="20200226103544709" tags="Mothers TV [[TV Series]]" title="Sex Education">
 <pre>[img[pictures/sex-education.jpg]]
 
@@ -12491,9 +12509,233 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
  &lt;&lt;heblink [[יד ימין אינה יודעת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200202185828817" modified="20200202185933864" tags="[[Coen sister]]" title="The sisters' questionnaire">
+<div created="20200202185828817" modified="20200306133216099" tags="[[Coen sister]]" title="The sisters' questionnaire">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
 
+
+!!![[Gura]]:
+
+
+The following questionnaire was written by [[Yoyo]] and I when we were [[there|The lab]]. I left the opening lines that we wrote back then, it was around 2003, as they are.
+
+It amuses me and even embarrasses me a little bit, because it sounds outmoded in my opinion. On the other hand, we also wrote that sisters speak &quot;maximized Hebrew&quot; as costumed at this area. Maybe now it's more of &quot;maximized Global&quot;. So here it is:
+
+The hundred and one questionnaire: 
+
+After reading and visiting the site, you must wonder if your'e fitted to be called a Coen sister.
+
+The sisters' questionnaire is designed for both men and women. Both woman and man can be and cannot be a [[Coen sister]], and because of that, every man or woman reading and willing to answer this questionnaire, should read it according to their gender and sexual preference, even though it's written in a heterosexual female form.
+
+Answer every question, at the end of the questionnaire press send, and wait to the upcoming response.
+
+During your waiting, try to do something useful, don't go in circles, and furthermore, never walk with empty hands.
+
+
+1.	Do you see yourself as a Coen sister?
+
+2.	Do you believe?
+
+3.	Do you believe people?
+
+4.	Are you hurt?
+
+5.	Do you think others see you as a Coen sister?
+
+6.	Do you have more than one mobile phone?
+
+7.	Do you like to wear synthetic clothes?
+
+8.	Do you know which clothes you like?
+
+9.	Do you prepare food?
+
+10.	Do you love food?
+
+11.	When you hear about something good that had happened to someone, do you feel happy?
+
+12.	Do planning to hurt people ever cross your mind?
+
+13.	Do you feel anger that runs through you several times a day?
+
+14.	Do you easily fall asleep?
+
+15.	Do you feel joy when something bad happens to someone?
+
+16.	When you see a pretty lady, do you wanna by her side?
+
+17.	Are you sensitive to scents?
+
+18.	Do you use perfumes?
+
+19.	Do you feel extra fondness to men with moustache? 
+
+20.	Do you listen to music when alone?
+
+21.	Do you feel extra fondness to women with moustache?
+
+22.	Do you ever have a strong desire to buy a disk and then you go and buy it?
+
+23.	Do you buy music from musicians?
+
+24.	Do you buy music from people with ties?
+
+25.	Do you read books?
+
+26.	To how many newscasts do you listen every day?
+
+27.	Do you like Moshe Nussbaum?
+
+28.	Do you believe in the existence of life on other planets or in faraway galaxies?
+
+29.	Would you like to be part of a group that accept people of your kind?
+
+30.	Do you feel contempt towards people who believe in life on other planets?
+
+31.	Do you use to consult with fortune teller, soothsayer etc?
+
+32.	Do you think you know to tell people their fortune?
+
+33.	Do you think you know better than other people what's good for them?
+
+34.	Do you have psychic/prophetic dreams? 
+
+35.	Do you remember dreams?
+
+36.	Do you have erotic dreams?
+
+37.	Had you ever got an accent stuck to you that hadn't leave you for months? 
+
+38.	Do you give away recipes, and if so do you explain everything including the making process?  
+
+39.	Do you think were all equal?
+
+40.	Is there a nationality, religion, color, gender etc that you don't like at all?
+
+41.	Do you feel sorry for a woman who got abandoned by her partner?
+  
+42.	Would you hit on a man or woman?
+
+43.	Are you happy to hear about something good that happened to someone?
+
+44.	Do you have a developed intuition (a six sense)?
+
+45.	Is your subconscious function as an organizer?
+
+46.	Do you ever suffer from guilt feeling?
+
+47.	Are brands important to you?
+
+48.	Do you wear makeup?
+
+49.	Have you ever been bullied?
+
+50.	Have you stole your best friend's boyfriend?
+
+51.	Have your best friend stole your partner or the one who you desired dearly?
+
+52.	Have you ever hurt you partner?
+
+53.	Do you have a house keeping lady?
+
+54.	Do you have a central mini air conditioner?
+ 
+55.	Have you purchased schraubenschlüssel lately?
+
+56.	Do you know how to change a tire?
+
+57.	Do you have a tow truck insurance?
+
+58.	What sensation does the word spirituality makes you feel?
+
+59.	Do you like halva?
+
+60.	Do you like bingo?
+
+61.	Do you like to play bingo?
+
+62.	Do you think you're telepathic?
+
+63.	Do you believe in a force majeure?
+
+64.	Do you believe that the divine providence is in your favor? 
+
+65.	Do you thank the creator of the universe in your heart?
+
+66.	In your opinion, would you win a light-saber?
+
+67.	Are you left-handed?
+
+68.	Are you right-handed?
+
+69.	Are your political believes are right? 
+
+70.	Do you like to make lists?
+
+71.	Do you find any satisfaction, even the slightest, in revenge?
+ 
+72.	Does jealousy flatters you?
+
+73.	Are you pro constructive criticism?
+
+74.	Do you like cigarettes?
+
+75.	Do you drink strong coffee?
+
+76.	Do you like to give orders?
+
+77.	Do you like to take orders?
+
+78.	Can you take orders and even carry them out?
+
+79.	Do you like cinema?
+
+80.	Do you like cola?
+
+81.	Do you like the Coen Brothers' films?
+
+82.	Do you like sweet food?
+
+83.	Are you good at baking?
+
+84.	Do you speak loudly?
+
+85.	Do you speak to yourself?
+
+86.	Do you have an inner world?
+
+87.	Are you an enlighten person?
+
+88.	Are you incapable of reading a text and picturing it?
+
+89.	Are you naive?
+
+90.	Do you wear sport elegant?
+
+91.	Do you do sport?
+
+92.	Do you take good care of your teeth?
+
+93.	Are you attracted to Gadi Soknik?
+
+94.	If you didn't have any financial restriction, would you do a plastic surgery?
+
+95.	Do you like shopping?
+
+96.	Do you shower every day?
+
+97.	Have you ever had fake nails?
+
+98.	Do you know how to swim?
+
+99.	Would you not have sex with Bill Clinton?
+
+100.	Do you have a sense of humor?
+
+101.	Do you know who established the [[one o one|https://en.wikipedia.org/wiki/Unit_101]]?
+
+
+
+[[Send]]
 
 
  &lt;&lt;heblink [[שאלון האחיות]]&gt;&gt;
