--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[על הספקטרום]] [[כישורים חברתיים]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200304124558079" title="$:/temp/search">
+<div created="20161023184814872" modified="20200306132606930" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200304124026240" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306133622836" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11931,8 +11931,16 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200303102856758" tags="[[קופים ממונעים]]" title="דור הנפש">
+<div created="20200303102502696" modified="20200306130355307" tags="[[קופים ממונעים]] ילדים" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
+
+
+[[גורה]]:
+
+
+
+
+[[SLAM MENTAL|https://www.youtube.com/watch?v=lldS41Px5_s]]
 
 
 
@@ -19008,10 +19016,13 @@ Fapina''
 
 &lt;&lt;englink [[Shalom Hanoch]]&gt;&gt;</pre>
 </div>
-<div created="20161213222959588" modified="20170508145757745" title="שלח">
+<div created="20161213222959588" modified="20200306133648091" title="שלח">
 <pre>[img[pictures/CT2ku66Mqk7cBavl.JPG]]
 ''
-הכל ייתברר''</pre>
+הכל ייתברר''
+
+
+&lt;&lt;englink [[Send]]&gt;&gt;</pre>
 </div>
 <div created="20170707184028118" modified="20190314145948472" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
 <pre>[img[pictures/shmarim-krantz.jpg]]
