--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>Arnon Chen</li>
 
+<li>Asparagus</li>
+
 <li>Assaf Amdursky</li>
 
 <li>Assuming and Preserving</li>
@@ -364,6 +366,8 @@ Error message and password prompt
 <li>Coffee shops</li>
 
 <li>Comprehensive or compulsive</li>
+
+<li>Crust dough</li>
 
 <li>Dalya`s room</li>
 
@@ -663,6 +667,8 @@ Error message and password prompt
 
 <li>Pina Bausch</li>
 
+<li>Potatoes' Gratin</li>
+
 <li>Powders</li>
 
 <li>Pride here</li>
@@ -886,6 +892,8 @@ Error message and password prompt
 <li>When they said cassette</li>
 
 <li>When they sleep</li>
+
+<li>White rice with pine nuts</li>
 
 <li>Wishing star 04</li>
 
@@ -9178,6 +9186,14 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 
 </pre>
 </div>
+<div created="20200306135045718" modified="20200306135329340" tags="Recipes [[Christmas dinner Recipes]]" title="Asparagus">
+<pre>
+[img[pictures/asparagus.jpg]]
+
+
+ &lt;&lt;heblink [[אספרגוס]]&gt;&gt;
+</pre>
+</div>
 <div created="20200226163928003" modified="20200226164056121" tags="Music [[Outer sisters]] [[Here in the Ghetto]]" title="Assaf Amdursky">
 <pre>[img[pictures/Assaf-Amdursky.jpg]]
 
@@ -9689,6 +9705,18 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
+<div created="20200306135627344" modified="20200306135800167" tags="Recipes Baking [[When they sleep]] [[Food addicts]]" title="Crust dough">
+<pre>
+[img[pictures/b-parich.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[בצק פריך]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
@@ -10009,7 +10037,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306133331279" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306140015789" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11602,6 +11630,15 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
+<div created="20200306135928877" modified="20200306140036718" tags="Recipes [[Christmas dinner Recipes]]" title="Potatoes' Gratin">
+<pre>
+[img[pictures/gratin.jpg]]
+
+
+
+ &lt;&lt;heblink [[גרטן תפו&quot;א]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217130746048" modified="20200219192735176" tags="[[Food addicts]] Baking [[Dreams that we've dreamt]]" title="Powders">
 <pre>[img[pictures/avkot.jpg]]
 
@@ -13135,6 +13172,14 @@ they also said tape''
 
 &lt;&lt;heblink [[כשהם ישנים]]&gt;&gt;
 </pre>
+</div>
+<div created="20200306133918926" modified="20200306134051857" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="White rice with pine nuts">
+<pre>
+[img[pictures/orez-lavan-matconim.jpg]]
+
+
+
+ &lt;&lt;heblink [[אורז לבן עם צנוברים]]&gt;&gt;</pre>
 </div>
 <div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
 <pre>[img[pictures/ela.jpg]]
