--- a/index.html
+++ b/index.html
@@ -9176,10 +9176,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200220174001870" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200306135212869" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200226171359702" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200306135214572" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="מתכונים" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200306132606930" title="$:/temp/search">
+<div created="20161023184814872" modified="20200306133832153" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306133622836" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306140058275" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10113,7 +10113,7 @@ well,
 
 </pre>
 </div>
-<div created="20170402173414658" modified="20180605132906797" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="אורז לבן עם צנוברים">
+<div created="20170402173414658" modified="20200306134154622" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
@@ -10132,7 +10132,11 @@ well,
 
 לאחר העשרים דקות האורז מוכן להגשה.
 
-את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
+את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.
+
+
+&lt;&lt;englink [[White rice with pine nuts]]&gt;&gt;
+</pre>
 </div>
 <div created="20181020104051284" modified="20200226102720299" tags="סדרות אימהות טלוויזיה" title="אחוזת דאונטון">
 <pre>[img[pictures/downton-abbey.jpg]]
@@ -10562,7 +10566,7 @@ well,
 &lt;&lt;englink [[Assaf Amdursky]]&gt;&gt;
 </pre>
 </div>
-<div created="20170407125610504" modified="20180605132930456" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="אספרגוס">
+<div created="20170407125610504" modified="20200306135347165" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="אספרגוס">
 <pre>[img[pictures/asparagus.jpg]]
 
 !!![[אווה]]:
@@ -10572,7 +10576,11 @@ well,
 * מחממים מחבת כבדה, ומוסיפים לתוכה שתי כפות חמאה.
 * מטגנים בחמאה שתי שיני שום פרוסות.
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
-* בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
+* בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).
+
+
+
+&lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
 <div created="20171216194951924" modified="20200216152012505" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
@@ -10838,7 +10846,7 @@ Is where I want to be
 
 ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
 </div>
-<div created="20170701112743899" modified="20190314144728960" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
+<div created="20170701112743899" modified="20200306135901890" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
 <pre>[img[pictures/b-parich.jpg]]
 
 !!![[אווה]]:
@@ -10881,6 +10889,9 @@ Is where I want to be
 2. מוסיפים את שאר החומרים ומעבדים עד לכדור בצק חלק 
 
 3.  עוטפים בניילון נצמד ומקררים כחצי שעה.
+
+
+&lt;&lt;englink [[Crust dough]]&gt;&gt;
 </pre>
 </div>
 <div created="20180326151902676" modified="20200216161645317" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ברי סחרוף">
@@ -11835,7 +11846,7 @@ Is where I want to be
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
 </div>
-<div created="20170409193149814" modified="20180605132946857" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפו&quot;א">
+<div created="20170409193149814" modified="20200306140123641" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפו&quot;א">
 <pre>[img[pictures/gratin.jpg]]
 
 
@@ -11870,7 +11881,7 @@ Is where I want to be
 6. מקררים רבע שעה ומגישים .
 
 
-
+&lt;&lt;englink [[Potatoes' Gratin]]&gt;&gt;
 </pre>
 </div>
 <div created="20180715194223602" modified="20200225190010939" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="גרציאני">
